--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -89,7 +89,7 @@
             <form autocomplete="off" id="loginForm" method="post" onsubmit="return submitForm()"
                   th:action="@{api/auth/login}">
                 <div class="login-form email">
-                    <input name="username" placeholder="Enter email" required type="text">
+                    <input name="username" placeholder="Enter username" required type="text">
                 </div>
                 <div class="login-form password">
                     <input name="password" placeholder="Enter password" required type="password">
