--- a/src/main/resources/templates/moderator/moderatorAIReports.html
+++ b/src/main/resources/templates/moderator/moderatorAIReports.html
@@ -11,34 +11,61 @@
 </head>
 <header>
     <div class="header">
-        <img alt="logo" class="logo" src="../../static/images/logo.svg" th:src="@{images/logo.svg}">
+        <img alt="logo" class="logo" src="../../static/images/logo.svg" th:src="@{../images/logo.svg}">
 
-        <form class="search-form">
+        <form class="search-form" th:action="@{/allRecipes}">
             <img alt="magnifier" class="magnifier" src="../../static/images/magnifier.svg"
-                 th:src="@{images/magnifier.svg}">
-            <input name="query" placeholder="Search" type="search">
+                 th:src="@{../images/magnifier.svg}">
+            <input name="startWith" placeholder="Search" type="search">
         </form>
+
         <a class="button-style" href="allRecipes.html" th:href="@{/allRecipes}">All recipes</a>
-        <a class="button-style" href="recipe.html" th:href="@{/recipe/1}">Random</a>
+        <a class="button-style" href="recipe.html" th:href="@{/recipe/{id1}(id1=${randomRecipeId})}">Random</a>
 
-        <div class="heart-container">
+        <div class="user-container heart-login-container" id="heart-btn">
             <div class="heart"
-                 onmouseout="restoreImage('heart-img', '../../images/heart.svg')"
-                 onmouseover="changeImage('heart-img', '../../images/heart-hover.svg')">
-                <img alt="heart" class="heart" id="heart-img" src="../../images/heart.svg" th:src="@{images/heart.svg}">
+                 onmouseout="restoreImage('heart-img', '../../images/heart-login.svg')"
+                 onmouseover="changeImage('heart-img', '../../images/heart-login-hover.svg')">
+                <img alt="heart" class="heart" id="heart-img" src="../../images/heart-login.svg"
+                     th:src="@{../images/heart-login.svg}">
             </div>
         </div>
 
-        <div class="user-container">
-            <div class="user"
-                 onmouseout="restoreImage('user-img', '../../images/user.svg')"
-                 onmouseover="changeImage('user-img', '../../images/user-hover.svg')">
-
-                <img alt="user" class="user" id="user-img" src="../../images/user.svg" th:src="@{images/user.svg}">
+        <div id="overlay-favorite" onclick="hideOverlay()"></div>
+        <div class="favoriteLists-window" id="favorite-popup-window">
+            <div th:if="${favoriteList != null}">
+                <div th:each="recipe, i : ${favoriteList.getUser().getRecipes()}">
+                    <button th:class="${i.index == 0} ? 'recipe' : 'recipe' + i.index">
+                        <div class="content-wrapper">
+                            <div class="comment-user-circle">
+                                <img th:alt="${recipe.getCategory().getTitle()}"
+                                     th:class="${recipe.getCategory().getTitle().replace(' ', '-')}"
+                                     th:if="${recipe}"
+                                     th:src="@{'../images/' + ${recipe.getCategory().getTitle()} + '.svg'}">
+                            </div>
+                            <div class="text-wrapper">
+                                <a style="font-weight: bold;" th:text="${recipe.getTitle()}"></a>
+                            </div>
+                        </div>
+                    </button>
+                </div>
             </div>
         </div>
+
+
+        <button class="user-container" id="user-btn">
+            <a href="moderatorPage.html" th:href="@{/moderator}">
+                <div class="user"
+                     onmouseout="restoreImage('user-img', '../../images/user-login.svg')"
+                     onmouseover="changeImage('user-img', '../../images/user-login-hover.svg')">
+                    <img alt="user" class="user" id="user-img" src="../../images/user-login.svg"
+                         th:src="@{../images/user-login.svg}">
+                </div>
+            </a>
+        </button>
+
         <a href="main.html" th:href="@{/}">
-            <img alt="home" class="home" src="../../images/home.svg" th:src="@{images/home.svg}">
+            <img alt="home" class="home" src="../../images/home.svg" th:src="@{../images/home.svg}">
         </a>
     </div>
 </header>
