added some logic to make moderator login

--- a/src/main/resources/templates/user/user.html
+++ b/src/main/resources/templates/user/user.html
@@ -102,9 +102,9 @@
 
     <div id="overlay-password" onclick="hideOverlay()"></div>
 
-    <div class="list-container" id="password-popup-window" style="top: 50vh;">
+    <div class="list-container" id="password-popup-window" style="top: 69vh;">
         <div class="list-name">
-            <input id="password" name="title" placeholder="Enter password" type="text">
+            <input id="password" name="title" placeholder="Enter password" style="top: 10vh;" type="text">
         </div>
         <a class="confirm-list-button" href="../moderator/moderatorPage.html" id="confirm-password-btn"
            th:href="@{/moderator}">Confirm</a>
