--- a/src/main/resources/templates/user/user.html
+++ b/src/main/resources/templates/user/user.html
@@ -104,13 +104,12 @@
 
     <div class="list-container" id="password-popup-window" style="top: 69vh;">
         <div class="list-name">
-            <input id="password" name="title" placeholder="Enter password" style="top: 10vh;" type="text">
+            <input id="password" name="title" placeholder="Enter password" type="text">
         </div>
         <a class="confirm-list-button" href="../moderator/moderatorPage.html" id="confirm-password-btn"
-           th:href="@{/moderator}">Confirm</a>
+           style="top: 10vh;" th:href="@{/moderator}">Confirm</a>
     </div>
-
-
+    
     <div class="recipesField">
         <div class="recipesFieldHeader">
             <p class="c7">User notes</p>
