--- a/src/main/resources/templates/user/user.html
+++ b/src/main/resources/templates/user/user.html
@@ -87,7 +87,6 @@
     </div>
 
     <div id="overlay-list" onclick="hideOverlay()"></div>
-
     <div class="list-container" id="list-field-popup-window">
         <form method="post" onsubmit="return validateInput('listName')"
               th:action="@{/api/newList/0}"
@@ -101,15 +100,14 @@
 
 
     <div id="overlay-password" onclick="hideOverlay()"></div>
-
     <div class="list-container" id="password-popup-window" style="top: 69vh;">
         <div class="list-name">
             <input id="password" name="title" placeholder="Enter password" type="text">
         </div>
-        <a class="confirm-list-button" href="../moderator/moderatorPage.html" id="confirm-password-btn"
+        <a class="confirm-list-button" href="../moderator/moderatorPage.html"
            style="top: 10vh;" th:href="@{/moderator}">Confirm</a>
     </div>
-    
+
     <div class="recipesField">
         <div class="recipesFieldHeader">
             <p class="c7">User notes</p>
