--- a/src/main/resources/templates/user/user.html
+++ b/src/main/resources/templates/user/user.html
@@ -106,10 +106,10 @@
         <div class="list-name">
             <input id="password" name="title" placeholder="Enter password" type="text">
         </div>
-        <a class="confirm-list-button" href="../moderator/moderatorPage.html" id="confirm-password-btn"
+        <a class="confirm-list-button text-confirm" href="../moderator/moderatorPage.html" id="confirm-password-btn"
            style="top: 10vh;" th:href="@{/moderator}">Confirm</a>
     </div>
-    
+
     <div class="recipesField">
         <div class="recipesFieldHeader">
             <p class="c7">User notes</p>
