--- a/src/main/resources/templates/moderator/moderatorAIReports.html
+++ b/src/main/resources/templates/moderator/moderatorAIReports.html
@@ -4,10 +4,10 @@
     <title>AI Reports</title>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <link href="../../static/css/moderatorAIReports.css" rel="stylesheet" th:href="@{../css/moderatorAIReports.css}"
+    <link href="../../static/css/moderatorUserReports.css" rel="stylesheet" th:href="@{../css/moderatorUserReports.css}"
           type="text/css">
-    <link href="../../static/css/headerIfooter.css" rel="stylesheet" th:href="@{../css/headerIfooter.css}">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="../../static/css/headerIfooter.css" rel="stylesheet" th:href="@{../css/headerIfooter.css}">
 </head>
 <header>
     <div class="header">
@@ -70,7 +70,7 @@
     </div>
 </header>
 <body>
-<div class="titleForAiPage">Recipe publishing (AI reports)</div>
+<div class="titleForUserPage">AI reports</div>
 <div class="AIReportField">
     <div class="scrollField">
         <div class="reportField">
@@ -79,7 +79,7 @@
                 <!--TODO: А далі треба взяти категорії, назву та час приготування з бд -->
                 <div class=" notInBD InBD">Categories Title Time for cooking</div>
                 <div class="informationField">
-                    <button id="processing1">Take for processing</button>
+                    <button id="processing">Take for processing</button>
                 </div>
             </div>
         </div>
@@ -89,7 +89,7 @@
                 <!--TODO: А далі треба взяти категорії, назву та час приготування з бд -->
                 <div class=" notInBD InBD">Categories Title Time for cooking</div>
                 <div class="informationField">
-                    <button id="processing2">Take for processing</button>
+                    <button id="processing1">Take for processing</button>
                 </div>
             </div>
         </div>
@@ -99,7 +99,7 @@
                 <!--TODO: А далі треба взяти категорії, назву та час приготування з бд -->
                 <div class=" notInBD InBD">Categories Title Time for cooking</div>
                 <div class="informationField">
-                    <button id="processing3">Take for processing</button>
+                    <button id="processing2">Take for processing</button>
                 </div>
             </div>
         </div>
@@ -150,3 +150,17 @@
 </footer>
 <script src="../../static/js/scripts.js" th:href="@{js/scripts.js}"></script>
 </html>
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>Title</title>-->
+<!--</head>-->
+<!--<body>-->
+<!--<table th:each="report: ${reports}">-->
+<!--    <tr>-->
+<!--        <td th:text="${report.getDescription()}"></td>-->
+<!--    </tr>-->
+<!--</table>-->
+<!--</body>-->
+<!--</html>-->
