added dropdown for category

--- a/src/main/resources/static/css/recipeCreation.css
+++ b/src/main/resources/static/css/recipeCreation.css
@@ -297,3 +297,42 @@ button#addRow {
     background: #733506;
     border-radius: 4.63vh;
 }
+
+.recipeCategory {
+    position: relative;
+    width: 45vw;
+    height: 6.19vh;
+    background: #F2E3B3;
+    border-radius: 5.5vh;
+}
+
+.recipeCategory select {
+    width: 100%;
+    height: 100%;
+    border: none;
+    background: #F2E3B3;
+    font-family: 'Frank Ruhl Libre', serif;
+    font-size: 2vw;
+    border-radius: 5.5vh;
+    outline: none;
+    padding-left: 1vw;
+    padding-right: 2vw;
+    -webkit-appearance: none;
+    appearance: none;
+    cursor: pointer;
+}
+
+.recipeCategory::after {
+    position: absolute;
+    top: 50%;
+    right: 1vw;
+    transform: translateY(-50%);
+    pointer-events: none;
+    background-size: 1.5vw 1.5vh;
+    width: 1.5vw;
+    height: 1.5vh;
+}
+
+.recipeCategory:hover::after {
+    background-color: #D4C28B;
+}
