added accept button to moderator processing page

--- a/src/main/resources/templates/moderator/moderatorPage.html
+++ b/src/main/resources/templates/moderator/moderatorPage.html
@@ -74,22 +74,18 @@
     <div class="copyright">© Company policy and privacy rules</div>
 
     <div class="circle-container telegram-container">
-        <div
-                class="telegram"
-                onmouseout="restoreImage('telegram-img', '../../images/telegram.svg')"
-                onmouseover="changeImage('telegram-img', '../../images/telegram-hover.svg')"
-        >
+        <div class="telegram"
+             onmouseout="restoreImage('telegram-img', '../../images/telegram.svg')"
+             onmouseover="changeImage('telegram-img', '../../images/telegram-hover.svg')">
             <img alt="telegram" class="telegram" id="telegram-img" src="../../images/telegram.svg"
                  th:src="@{images/telegram.svg}">
         </div>
     </div>
 
     <div class="circle-container instagram-container">
-        <div
-                class="instagram"
-                onmouseout="restoreImage('instagram-img', '../../images/inst.svg')"
-                onmouseover="changeImage('instagram-img', '../../images/inst-hover.svg')"
-        >
+        <div class="instagram"
+             onmouseout="restoreImage('instagram-img', '../../images/inst.svg')"
+             onmouseover="changeImage('instagram-img', '../../images/inst-hover.svg')">
             <img alt="instagram" class="instagram" id="instagram-img" src="../../images/inst.svg"
                  th:src="@{images/inst.svg}">
         </div>
