--- a/src/main/resources/static/css/moderatorUserReports.css
+++ b/src/main/resources/static/css/moderatorUserReports.css
@@ -1,4 +1,3 @@
-
 ::-webkit-scrollbar {
     width: 0.78125vw;
 }
@@ -39,32 +38,20 @@
     position: absolute;
     width: 92vw;
     height: 64.5vh;
-    /*background-color: #3E5902;*/
     border-radius: 5vh;
     top: 3.5vh;
     margin-bottom: 13vh;
     left: 2vw;
-    overflow-y: auto; /* Дозволяє вертикальний скрол */
-    overflow-x: hidden; /* Вимикає горизонтальний скрол */
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
-
 .reportField {
-    width: 92vw;
+    width: 91.3vw;
     height: 30vh;
     background-color: #FBEFC7;
     border-radius: 5vh;
-
-}
-
-.report2 {
-    position: absolute;
-    top: 34.5vh;
-}
-
-.report3 {
-    position: absolute;
-    top: 69.5vh;
+    margin-bottom: 3vh;
 }
 
 /*____________________________________________________________________________________________________________________*/
@@ -85,7 +72,7 @@
 }
 
 .InBD {
-    left: 27vw;
+    left: 25vw;
 }
 
 .informationField {
@@ -98,7 +85,7 @@
     left: 1.8vw;
 }
 
-#processing, #processing1, #processing2 {
+#processing, #accept, #decline {
     position: absolute;
     width: 26vw;
     height: 6vh;
@@ -114,167 +101,17 @@
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-#processing:hover, #processing1:hover, #processing2:hover {
-    border: 0.5vh solid #3E5902;
-    background-color: #F2E3B3;
-    color: #3E5902;
-}
-
-/*____________________________________________________________________________________________________________________*/
-.footer {
-    position: fixed;
-    width: 100%;
-    height: 5.6vh;
-    top: 94.4vh;
-    bottom: 0;
-    background-color: #3E5902;
-    color: #F2E3B3;
-    padding: 1.4vh;
-    display: flex;
-    left: 0;
-    justify-content: space-between;
-    z-index: 5;
-}
-
-#send-button {
-    position: absolute;
-    right: 4.6875vw;
-    width: 9.0105vw;
-    height: 4.2593vh;
-    background-color: #3E5902;
-    border-radius: 2.7vw;
-    text-align: center;
-    font-family: 'Frank Ruhl Libre', serif;
-    font-size: 1.25vw;
-    color: #FBEFC7;
-    border: none;
-    top: 37.04vh;
-    bottom: 1.4815vh;
-    z-index: 15;
     cursor: pointer;
 }
 
-#send-button:hover {
-    background-color: #FBEFC7;
-    color: #3E5902;
+#accept {
+    display: none;
+    top: 10.4vw;
+    width: 13vw;
+}
+
+#processing:hover, #accept:hover {
     border: 0.5vh solid #3E5902;
-}
-
-#overlay, #overlay-list {
-    position: fixed;
-    display: none;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 10;
-}
-
-.window {
-    position: fixed;
-    display: none;
-    bottom: 9.2593vh;
-    left: 9.6vh;
-    width: 59.375vw;
-    height: 43.056vh;
-    background: #F2E3B3;
-    padding: 0.02vw;
-    z-index: 11;
-    border-radius: 5.5vh;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-}
-
-.inner-window {
-    background: #FBEFC7;
-    position: absolute;
-    width: 55.2083vw;
-    height: 31.945vh;
-    left: 2.1354167vw;
-    top: 3.5185vh;
-    padding-left: 0.01vw;
-    border-radius: 2.25vh;
-    z-index: 13;
-}
-
-.support-button {
-    position: relative;
-    left: 4.6875vw;
-    bottom: 0.6481vh;
     background-color: #F2E3B3;
-    color: #733506;
-    border-radius: 2.7vw;
-    padding: 0.19vw;
-    width: 8.4375vw;
-    height: 4.2593vh;
-    text-align: center;
-    font-family: 'Frank Ruhl Libre', serif;
-    font-size: 1.25vw;
-    font-weight: 400;
-    line-height: 4.2593vh;
-    border: none;
-    cursor: pointer;
-    outline: none;
-}
-
-.support-button span {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.support-button:hover {
-    background-color: transparent;
-    border: 0.4vh solid #F2E3B3;
-    color: #F2E3B3;
-}
-
-.circle-container {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #F2E3B3;
-    border-radius: 50%;
-    width: 2.4vw;
-    height: 5vh;
-    bottom: 1vh;
-}
-
-.telegram-container {
-    right: 5vw;
-}
-
-.instagram-container {
-    right: 3vw;
-}
-
-.telegram {
-    width: 2.39583vw;
-    height: 4.2592vh;
-}
-
-.instagram {
-    width: 2.3vw;
-    height: 4.06vh;
-}
-
-.telegram-container:hover, .instagram-container:hover {
-    background-color: #733506;
-}
-
-.copyright {
-    position: static;
-    width: 21vw;
-    height: 3vh;
-    margin: auto;
-    font-family: 'Frank Ruhl Libre';
-    font-size: 1.25vw;
-    font-weight: 400;
-    line-height: 1vh;
-    text-align: left;
-    color: #F2E3B3;
+    color: #3E5902;
 }
