--- a/src/main/resources/templates/moderator/moderatorUserReports.html
+++ b/src/main/resources/templates/moderator/moderatorUserReports.html
@@ -9,6 +9,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="../../static/css/headerIfooter.css" rel="stylesheet" th:href="@{../css/headerIfooter.css}">
 </head>
+<body>
 <header>
     <div class="header">
         <img alt="logo" class="logo" src="../../static/images/logo.svg" th:src="@{../images/logo.svg}">
@@ -24,34 +25,12 @@
 
         <div class="user-container heart-login-container" id="heart-btn">
             <div class="heart"
-                 onmouseout="restoreImage('heart-img', '../../images/heart-login.svg')"
-                 onmouseover="changeImage('heart-img', '../../images/heart-login-hover.svg')">
+                 onmouseout="restoreImage('heart-img', '../images/heart-login.svg')"
+                 onmouseover="changeImage('heart-img', '../images/heart-login-hover.svg')">
                 <img alt="heart" class="heart" id="heart-img" src="../../images/heart-login.svg"
                      th:src="@{../images/heart-login.svg}">
             </div>
         </div>
-
-        <div id="overlay-favorite" onclick="hideOverlay()"></div>
-        <div class="favoriteLists-window" id="favorite-popup-window">
-            <div th:if="${favoriteList != null}">
-                <div th:each="recipe, i : ${favoriteList.getUser().getRecipes()}">
-                    <button th:class="${i.index == 0} ? 'recipe' : 'recipe' + i.index">
-                        <div class="content-wrapper">
-                            <div class="comment-user-circle">
-                                <img th:alt="${recipe.getCategory().getTitle()}"
-                                     th:class="${recipe.getCategory().getTitle().replace(' ', '-')}"
-                                     th:if="${recipe}"
-                                     th:src="@{'../images/' + ${recipe.getCategory().getTitle()} + '.svg'}">
-                            </div>
-                            <div class="text-wrapper">
-                                <a style="font-weight: bold;" th:text="${recipe.getTitle()}"></a>
-                            </div>
-                        </div>
-                    </button>
-                </div>
-            </div>
-        </div>
-
 
         <button class="user-container" id="user-btn">
             <a href="moderatorPage.html" th:href="@{/moderator}">
@@ -69,54 +48,34 @@
         </a>
     </div>
 </header>
-<body>
-<div class="titleForUserPage">User reports</div>
-<div class="AIReportField">
-    <div class="scrollField">
-        <div class="reportField">
-            <div class="linkField">
-                <div class="notInBD">Request for recipe review:</div>
-                <!--TODO: А далі треба взяти категорії, назву та час приготування з бд -->
-                <div class=" notInBD InBD">Categories Title Time for cooking</div>
-                <div class="informationField">
-                    <button id="processing">Take for processing</button>
-                </div>
-            </div>
-        </div>
-        <div class="reportField report2">
-            <div class="linkField">
-                <div class="notInBD">Request for recipe review:</div>
-                <!--TODO: А далі треба взяти категорії, назву та час приготування з бд -->
-                <div class=" notInBD InBD">Categories Title Time for cooking</div>
-                <div class="informationField">
-                    <button id="processing1">Take for processing</button>
-                </div>
-            </div>
-        </div>
-        <div class="reportField report3">
-            <div class="linkField">
-                <div class="notInBD">Request for recipe review:</div>
-                <!--TODO: А далі треба взяти категорії, назву та час приготування з бд -->
-                <div class=" notInBD InBD">Categories Title Time for cooking</div>
-                <div class="informationField">
-                    <button id="processing2">Take for processing</button>
+<main>
+    <div class="titleForUserPage">User reports</div>
+    <div class="AIReportField">
+        <div class="scrollField">
+            <div th:each="report: ${reports}">
+                <div class="reportField">
+                    <div class="linkField">
+                        <div class="notInBD">Request for recipe review:</div>
+                        <a class=" notInBD InBD" th:href="@{/recipe/{id}(id=${report.getRecipe().getId()})}"
+                           th:text="${report.getRecipe().getTitle()}"></a>
+                        <div class="informationField">
+                            <p th:text="${report.getDescription()}"></p>
+                            <button id="processing">Take for processing</button>
+                        </div>
+                        <button id="accept">Accept</button>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<table th:each="report: ${reports}">
-    <tr>
-        <td th:text="${report.getDescription()}"></td>
-    </tr>
-</table>
-</body>
+
+</main>
 <footer class="footer">
     <button class="support-button" id="support-btn"><span>Support</span></button>
 
     <div id="overlay" onclick="hideOverlay()"></div>
 
-    <div class="window" id="popup-window">  <!-- Вікно, яке з'являється при натисканні -->
+    <div class="window" id="popup-window">
         <div class="inner-window">
             <input name="query" placeholder="Enter feedback" type="search">
         </div>
@@ -127,40 +86,31 @@
     <div class="copyright">© Company policy and privacy rules</div>
 
     <div class="circle-container telegram-container">
-        <div
-                class="telegram"
-                onmouseout="restoreImage('telegram-img', '../../static/images/telegram.svg')"
-                onmouseover="changeImage('telegram-img', '../../static/images/telegram-hover.svg')"
-        >
-            <img alt="telegram" class="telegram" id="telegram-img" src="../../static/images/telegram.svg"
-                 th:src="@{images/telegram.svg}">
+        <div class="telegram"
+             onmouseout="restoreImage('telegram-img', '../../images/telegram.svg')"
+             onmouseover="changeImage('telegram-img', '../../images/telegram-hover.svg')">
+            <img alt="telegram" class="telegram" id="telegram-img" src="../../images/telegram.svg"
+                 th:src="@{../images/telegram.svg}">
         </div>
     </div>
 
     <div class="circle-container instagram-container">
-        <div
-                class="instagram"
-                onmouseout="restoreImage('instagram-img', '../../static/images/inst.svg')"
-                onmouseover="changeImage('instagram-img', '../../static/images/inst-hover.svg')"
-        >
-            <img alt="instagram" class="instagram" id="instagram-img" src="../../static/images/inst.svg"
-                 th:src="@{images/inst.svg}">
+        <div class="instagram"
+             onmouseout="restoreImage('instagram-img', '../../images/inst.svg')"
+             onmouseover="changeImage('instagram-img', '../../images/inst-hover.svg')">
+            <img alt="instagram" class="instagram" id="instagram-img" src="../../images/inst.svg"
+                 th:src="@{../images/inst.svg}">
         </div>
     </div>
 </footer>
+</body>
 <script src="../../static/js/scripts.js" th:href="@{js/scripts.js}"></script>
+<script>
+    document.getElementById('processing').addEventListener('click', function () {
+        document.getElementById('accept').style.display = 'block';
+        document.getElementById('processing').style.display = 'none';
+    });
+
+
+</script>
 </html>
-<!--<!DOCTYPE html>-->
-<!--<html lang="en">-->
-<!--<head>-->
-<!--    <meta charset="UTF-8">-->
-<!--    <title>Title</title>-->
-<!--</head>-->
-<!--<body>-->
-<!--<table th:each="report: ${reports}">-->
-<!--    <tr>-->
-<!--        <td th:text="${report.getDescription()}"></td>-->
-<!--    </tr>-->
-<!--</table>-->
-<!--</body>-->
-<!--</html>-->
