--- a/src/main/resources/static/css/moderatorUserReports.css
+++ b/src/main/resources/static/css/moderatorUserReports.css
@@ -104,13 +104,17 @@
     cursor: pointer;
 }
 
-#accept {
+#accept, #decline {
     display: none;
     top: 10.4vw;
     width: 13vw;
 }
 
-#processing:hover, #accept:hover {
+#decline {
+    left: 48vw;
+}
+
+#processing:hover, #accept:hover, #decline:hover {
     border: 0.5vh solid #3E5902;
     background-color: #F2E3B3;
     color: #3E5902;
