--- a/src/main/resources/templates/moderator/moderatorUserReports.html
+++ b/src/main/resources/templates/moderator/moderatorUserReports.html
@@ -63,6 +63,7 @@
                             <button id="processing">Take for processing</button>
                         </div>
                         <button id="accept">Accept</button>
+                        <button id="decline">Decline</button>
                     </div>
                 </div>
             </div>
@@ -111,6 +112,8 @@
         document.getElementById('processing').style.display = 'none';
     });
 
-
+    document.getElementById('processing').addEventListener('click', function () {
+        document.getElementById('decline').style.display = 'block';
+    });
 </script>
 </html>
