--- a/src/main/resources/templates/moderator/moderatorAIReports.html
+++ b/src/main/resources/templates/moderator/moderatorAIReports.html
@@ -112,7 +112,7 @@
 
     <div class="window" id="popup-window">  <!-- Вікно, яке з'являється при натисканні -->
         <div class="inner-window">
-            <input name="query" placeholder="Enter feedback" type="search">
+            <textarea name="query" placeholder="Enter feedback" required></textarea>
         </div>
 
         <button id="send-button">Send</button>
@@ -121,27 +121,23 @@
     <div class="copyright">© Company policy and privacy rules</div>
 
     <div class="circle-container telegram-container">
-        <div
-                class="telegram"
-                onmouseout="restoreImage('telegram-img', '../../images/telegram.svg')"
-                onmouseover="changeImage('telegram-img', '../../images/telegram-hover.svg')"
-        >
+        <div class="telegram"
+             onmouseout="restoreImage('telegram-img', '../../images/telegram.svg')"
+             onmouseover="changeImage('telegram-img', '../../images/telegram-hover.svg')">
             <img alt="telegram" class="telegram" id="telegram-img" src="../../images/telegram.svg"
                  th:src="@{../images/telegram.svg}">
         </div>
     </div>
 
     <div class="circle-container instagram-container">
-        <div
-                class="instagram"
-                onmouseout="restoreImage('instagram-img', '../../static/images/inst.svg')"
-                onmouseover="changeImage('instagram-img', '../../static/images/inst-hover.svg')"
-        >
-            <img alt="instagram" class="instagram" id="instagram-img" src="../../static/images/inst.svg"
+        <div class="instagram"
+             onmouseout="restoreImage('instagram-img', '../../images/inst.svg')"
+             onmouseover="changeImage('instagram-img', '../../images/inst-hover.svg')">
+            <img alt="instagram" class="instagram" id="instagram-img" src="../../images/inst.svg"
                  th:src="@{../images/inst.svg}">
         </div>
     </div>
 </footer>
 </body>
-<script src="../../static/js/scripts.js" th:href="@{js/scripts.js}"></script>
+<script src="../../js/scripts.js" th:href="@{js/scripts.js}"></script>
 </html>
