--- a/src/main/resources/templates/user/recipeCreation.html
+++ b/src/main/resources/templates/user/recipeCreation.html
@@ -114,7 +114,7 @@
     </form>
     <form class="text-form-StepByStep">
         <div class="recipeStepByStep">
-            <textarea name="description" placeholder="Step by step"></textarea>
+            <textarea name="description" placeholder="Step by step instructions"></textarea>
         </div>
     </form>
 
@@ -128,7 +128,7 @@
 
     <div class="window" id="popup-window">  <!-- Вікно, яке з'являється при натисканні -->
         <div class="inner-window">
-            <input name="query" placeholder="Enter feedback" type="search">
+            <textarea name="query" placeholder="Enter feedback" required></textarea>
         </div>
 
         <button id="send-button">Send</button>
