--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -253,11 +253,9 @@
     <div class="copyright">© Company policy and privacy rules</div>
 
     <div class="circle-container telegram-container">
-        <div
-                class="telegram"
-                onmouseout="restoreImage('telegram-img', '../../images/telegram.svg')"
-                onmouseover="changeImage('telegram-img', '../../images/telegram-hover.svg')"
-        >
+        <div class="telegram"
+             onmouseout="restoreImage('telegram-img', '../../images/telegram.svg')"
+             onmouseover="changeImage('telegram-img', '../../images/telegram-hover.svg')">
             <img alt="telegram" class="telegram" id="telegram-img" src="../../images/telegram.svg"
                  th:src="@{images/telegram.svg}">
         </div>
