--- a/src/main/resources/templates/user/recipeCreation.html
+++ b/src/main/resources/templates/user/recipeCreation.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Recipe Creation</title>
@@ -67,52 +67,54 @@
     </div>
 </header>
 <main>
-    <div class="title">Create a recipe</div>
+    <form method="post" th:action="@{/api/newRecipe}" th:object="${recipe}">
+        <div class="title">Create a recipe</div>
 
-    <form class="text-form-title">
-        <div class="recipeTitle">
-            <input name="query" placeholder="Recipe title" type="text">
+        <div class="text-form-title">
+            <div class="recipeTitle">
+                <input name="title" placeholder="Recipe title" th:value="${recipe.title}" type="text">
+            </div>
         </div>
-    </form>
-    <form class="text-form-time">
-        <div class="recipeCookingTime">
-            <input name="query" placeholder="Cooking time" type="number">
-            <!-- TODO               min value 1-->
+        <div class="text-form-time">
+            <div class="recipeCookingTime">
+                <input name="cookingTime" min="1" value="1" th:value="${recipe.cookingTime}" placeholder="Cooking time"
+                       type="number">
+            </div>
         </div>
-    </form>
-    <form class="text-form-category">
-        <div class="recipeCategory">
-            <input name="query" placeholder="Category" type="text">
+        <form class="text-form-category">
+            <div class="recipeCategory">
+                <input name="query" placeholder="Category" type="text">
+            </div>
+        </form>
+        <div class="ingredientsField">
+            <div class="tableContainer">
+                <table id="ingredientsTable">
+                    <tbody>
+                    <tr>
+                        <td><input name="ingredient" placeholder="Ingredient" type="text"></td>
+                        <td><input name="amount" placeholder="Amount" type="text"></td>
+                        <td>
+                            <button class="deleteRow">Delete</button>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+            <button id="addRow">Add</button>
         </div>
-    </form>
-    <div class="ingredientsField">
-        <div class="tableContainer">
-            <table id="ingredientsTable">
-                <tbody>
-                <tr>
-                    <td><input name="ingredient" placeholder="Ingredient" type="text"></td>
-                    <td><input name="amount" placeholder="Amount" type="text"></td>
-                    <td>
-                        <button class="deleteRow">Delete</button>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
-        <button id="addRow">Add</button>
-    </div>
-    <form class="text-form-devices">
-        <div class="recipeDevices"></div>
-        <input name="query" placeholder="Recipe devices" type="text">
-    </form>
-    <form class="text-form-StepByStep">
-        <div class="recipeStepByStep">
-            <textarea name="description" placeholder="Step by step"></textarea>
-        </div>
-    </form>
+        <form class="text-form-devices">
+            <div class="recipeDevices"></div>
+            <input name="query" placeholder="Recipe devices" type="text">
+        </form>
+        <form class="text-form-StepByStep">
+            <div class="recipeStepByStep">
+                <textarea name="description" placeholder="Step by step"></textarea>
+            </div>
+        </form>
 
-    <button class="saveButton">Save</button>
-    <button class="publishButton">Publish</button>
+        <button class="saveButton">Save</button>
+        <button class="publishButton">Publish</button>
+    </form>
 </main>
 <footer class="footer">
     <button class="support-button" id="support-btn"><span>Support</span></button>
