--- a/src/main/resources/templates/user/recipeCreation.html
+++ b/src/main/resources/templates/user/recipeCreation.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Recipe Creation</title>
@@ -78,51 +78,52 @@
                 <input name="title" placeholder="Recipe title" th:value="${recipe.title}" type="text">
             </div>
         </div>
-    </form>
-    <form class="text-form-time">
-        <div class="recipeCookingTime">
-            <input min="1" name="query" placeholder="Cooking time in minutes" type="number">
+        <div class="text-form-time">
+            <div class="recipeCookingTime">
+                <input min="1" th:value="${recipe.cookingTime}" name="cookingTime"
+                       placeholder="Cooking time in minutes" type="number" id="cookingTime">
+            </div>
         </div>
-    </form>
-    <form class="text-form-category">
-        <div class="recipeCategory">
-            <select name="query">
-                <option disabled selected value="">Category</option>
-                <option th:each="categor : ${category}" th:text="${categor}"
-                        th:value="${category}"></option>
-            </select>
-        </div>
-    </form>
+        <form class="text-form-category">
+            <div class="recipeCategory">
+                <select name="query">
+                    <option disabled selected value="">Category</option>
+                    <option th:each="categor : ${category}" th:text="${categor}"
+                            th:value="${category}"></option>
+                </select>
+            </div>
+        </form>
 
-    <div class="ingredientsField">
-        <div class="tableContainer">
-            <table id="ingredientsTable">
-                <tbody>
-                <tr>
-                    <td><input name="ingredient" placeholder="Ingredient" type="text"></td>
-                    <td><input name="amount" placeholder="Amount" type="text"></td>
-                    <td>
-                        <button class="deleteRow">Delete</button>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
+        <div class="ingredientsField">
+            <div class="tableContainer">
+                <table id="ingredientsTable">
+                    <tbody>
+                    <tr>
+                        <td><input name="ingredient" placeholder="Ingredient" type="text"></td>
+                        <td><input name="amount" placeholder="Amount" type="text"></td>
+                        <td>
+                            <button class="deleteRow">Delete</button>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+            <button id="addRow">Add</button>
         </div>
-        <button id="addRow">Add</button>
-    </div>
-    <form class="text-form-devices">
-        <div class="recipeDevices"></div>
-        <input name="query" placeholder="Recipe devices (separate by comas) " type="text">
-    </form>
-    <form class="text-form-StepByStep">
-        <div class="recipeStepByStep">
-            <textarea name="description" placeholder="Step by step instructions"></textarea>
-        </div>
-    </form>
+        <form class="text-form-devices">
+            <div class="recipeDevices"></div>
+            <input name="query" placeholder="Recipe devices (separate by comas) " type="text">
+        </form>
+        <form class="text-form-StepByStep">
+            <div class="recipeStepByStep">
+                <textarea name="description" placeholder="Step by step instructions"></textarea>
+            </div>
+        </form>
 
         <button class="saveButton">Save</button>
         <button class="publishButton">Publish</button>
     </form>
+
 </main>
 <footer class="footer">
     <button class="support-button" id="support-btn"><span>Support</span></button>
@@ -161,6 +162,7 @@
 <script src="../../js/scripts.js" th:href="@{js/scripts.js}"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
+    document.getElementById("cookingTime").value = ""
     $(document).ready(function () {
         $('#addRow').click(function () {
             let newRow = `<tr>
